feat: add MAX long polling integration

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lost&Found MAX MiniApp</title>
+    <!-- MAX Bridge для интеграции с MAX -->
+    <script src="https://st.max.ru/js/max-web-app.js"></script>
     <!-- Получите API ключ на https://developer.tech.yandex.ru/services/ -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ecec1e51-9d6e-4f5d-9dbc-379311ceaa0a&lang=ru_RU" defer></script>
   </head>
